[package]
name = "argus"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
image = { version = "0.25.10", default-features = false, features = ["png"] }
memchr = "2.8.1"
rayon = "1.12.0"
sysinfo = "0.37"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory"
]}

[build-dependencies]
winres = "0.1.12"
